# brosdk-mcp

./: .gitignore  .goreleaser.yaml  AGENT_INTEGRATION.md  CMakeLists.txt  Makefile  PROTOCOL.md  README.md  go.mod
bromcp/: CMakeLists.txt
bromcp/include/bromcp/: brosdk_client.h  dlfcn_compat.h  json.h  mcp_server.h  task_store.h  tool_registry.h  tools.h
bromcp/src/: brosdk_client.cc  json.cc  main.cc  mcp_server.cc  task_store.cc  tool_registry.cc  tools.cc
brosdk/interface/: brosdk.h
cmd/brosdk-mcp/: main.go
examples/mcp/: agent-sse.example.json  agent-stdio-binary.example.json  agent-stdio.example.json
internal/app/: app.go
internal/cdp/: client.go  client_test.go  discovery.go  discovery_test.go
internal/config/: config.go  config_test.go
internal/e2e/: ax_chrome_test.go  mcp_chrome_test.go
internal/mcp/: handler.go  handler_test.go  router.go
internal/schema/: browser-tools.schema.json  embed.go  registry.go  registry_test.go
internal/tools/: environment_manager.go  environment_manager_test.go  executor_advanced_interaction.go  executor_advanced_interaction_test.go  executor_aria_ax.go  executor_aria_ax_test.go  executor_cdp_native.go  executor_core.go  executor_helpers.go  executor_helpers_test.go  executor_interaction.go  executor_navigation.go  executor_navigation_test.go  executor_pageinfo.go  executor_ref_actions.go  executor_ref_actions_test.go  executor_ref_store.go  executor_scripts.go  executor_tabs.go  executor_wait.go  page_agent_ai.go  page_agent_ai_test.go  page_agent_registry.go  page_agent_registry_test.go  page_runtime.go  page_runtime_helpers.go
internal/transports/sse/: sse.go  sse_test.go  ui.go  ui.html
internal/transports/stdio/: stdio.go
schemas/: browser-tools.schema.json
skills/: SKILL.md
skills/agents/: openai.yaml
skills/references/: api-surface.md  claude.md  openai.md  tool-design.md
